fix problems with contrast and text

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -41,10 +41,13 @@ p.numeros{
     font-size:  3.333rem;
 }
 
+html {
+    background-color:white;
+}
 body {
     color: #000;
     //background: #F5FCFA;
-    background: white;
+    background-color: white;
     font-family: 'Open Sans', sans-serif;
     padding: 0px !important;
     margin: 0px !important;
@@ -70,6 +73,7 @@ a, a:hover, a:focus {
 }
 
 #container {
+    background-color: white;
     width: 100%;
     height: 100%;
 }
